# kadoma

./: .gitignore  .pre-commit-config.yaml  README.md  README.pymadoka.md  pyproject.toml  setup.py_
cfg/: example.yaml  mqtt-single-unit.yaml
examples/: custom_start.py  device_info.py  device_info_not_connected.py  device_status.py  update_set_point.py
kadoma/: __init__.py  ble.py  cli.py  consts.py  controller.py  knobs.py  mqtt.py  transport.py  unit.py
pymadoka/: __init__.py  __main__.py  cli2.py  connection.py  consts.py  controller.py  feature.py
pymadoka/features/: clean_filter.py  fanspeed.py  operationmode.py  power.py  setpoint.py  temperatures.py
tests/: fakebleio.py  knobdata.py
